<resources>
    <string name="app_name">Event Planner</string>
    <string name="po_services">MY SERVICES</string>
    <string name="search">Search…</string>
    <string name="price_list_button">Price list</string>
    <string name="view_details">View details</string>
    <string name="floatingDesc">Floating button</string>
    <string name="service_1">Service 1</string>
    <string name="service_2">Service 2</string>
    <string name="service_3">Service 3</string>
    <string name="service_4">Service 4</string>
    <string name="service_5">Service 5</string>
    <string name="desc">The best service...</string>
    <string name="service_title_placeholder">Service Title</string>
    <string name="service_image_description">Image of the service</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="plus_button">Add service</string>
    <string name="create_service">Create service</string>
    <string name="create_category_title">Create category</string>
    <string-array name="service_category_spinner">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
    </string-array>
    <string name="service_name">Service name:</string>
    <string name="Service_duration">Duration:</string>
    <string name="create_category">Create new</string>
    <string name="create_price">Price ($):</string>
    <string name="create_discount">Discount (%):</string>
    <string name="create_res_deadline">Reservation deadline:</string>
    <string name="create_cancel_deadline">Cancellation deadline:</string>
    <string-array name="service_visibility_spinner">
        <item>Visible</item>
        <item>Invisible</item>
    </string-array>
    <string-array name="service_availability_spinner">
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>
    <string-array name="service_event_type_spinner">
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
    </string-array>
    <string-array name="service_reservation_confirmation_spinner">
        <item>AUTOMATIC</item>
        <item>MANUAL</item>
    </string-array>
    <string name="service_description">Description:</string>
    <string name="service_image_url">Image url:</string>
    <string name="service_specificities">Specificities</string>
    <string name="service_created">Service created successfully!</string>
    <string name="category_created">Category created successfully!</string>
    <string name="service_edited">Service edited successfully!</string>
    <string name="service_deleted">Service deleted successfully!</string>
    <string name="close_form_description">Close form</string>
    <string name="fixed">Fixed duration</string>
    <string name="flexible">Flexible duration</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="from">From:</string>
    <string name="unavailable_dates">Unavailable dates</string>
    <string name="select_date">Select date</string>
    <string name="available_days">Available days</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="working_hours">Working hours</string>
    <string name="select_time">Select time</string>
    <string name="change_image_description">Change image</string>
    <string name="delete_image_description">Delete image</string>
    <string name="exit_form">Exit Form</string>
    <string name="service_name_label">Service name:</string>
    <string name="service_name_hint">Service name</string>
    <string name="service_category_label">Category:</string>
    <string name="category_hint">Category</string>
    <string name="service_price_label">Price($):</string>
    <string name="price_hint">0</string>
    <string name="service_discount_label">Sale(%):</string>
    <string name="discount_hint">0</string>
    <string name="service_time_type_label">Reservation type:</string>
    <string name="fixed_time">Fixed time</string>
    <string name="flexible_time">Flexible time</string>
    <string name="duration_hours_label">Hours:</string>
    <string name="duration_minutes_label">Minutes:</string>
    <string name="from_time_label">From:</string>
    <string name="to_time_label">To:</string>
    <string name="event_type_label">Event type:</string>
    <string name="reservation_type_label">Reservation type:</string>
    <string name="visibility_label">Visibility:</string>
    <string name="availability_label">Availability:</string>
    <string name="description_label">Description:</string>
    <string name="description_hint">Descrtiption</string>
    <string name="specs_label">Specifics:</string>
    <string name="specs_hint">Specifics</string>
    <string name="add_new_budget_item">Create budget item</string>
    <string name="add_item">Dodaj stavku</string>
    <string name="item_name">Naziv stavke</string>
    <string name="add_new_item">Dodaj novu stavku</string>
    <string name="show_suggested_categories">Prikaži predložene kategorije</string>
    <string name="create_budget_plan">Budget planning</string>
    <string name="update">Update</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="events">MOST POPULAR EVENTS</string>
    <string name="event_1">Event 1</string>
    <string name="event_2">Event 2</string>
    <string name="event_3">Event 3</string>
    <string name="event_4">Event 4</string>
    <string name="event_5">Event 5</string>
    <string name="view_details_buttton">View Details</string>
    <string name="login">Log in</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_pass">Confirm password :</string>
    <string name="name">Name :</string>
    <string name="surname">Surname :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="role">Role :</string>
    <string-array name="roles_spinner">
        <item>Event organiser</item>
        <item>Service/product provider</item>
    </string-array>
    <string name="reset_pass">Reset your password</string>
    <string name="click_send_link">Please click the following button to receive an email with the link
    for changing your password.</string>
    <string name="send_link">Send link</string>
    <string name="key">Key</string>
    <string name="business_reg">Business registration</string>
    <string name="company_name">Company name :</string>
    <string name="company_email">Company email :</string>
    <string name="description">Description :</string>
    <string name="images">Images :</string>
    <string name="register">Register</string>
    <string name="business_reg_success">Successful business registration!</string>
    <string name="registration_success">Successful registration! Visit the link we sent to your email address.</string>
    <string name="gallery">Gallery</string>
    <string name="enter_search_criteria">Enter search criteria</string>
    <string name="apply_filter">Apply Filter</string>
    <string-array name="sort_options">
        <item>Highest to lowest</item>
        <item>Lowest to highest</item>
    </string-array>
    <string-array name="category_options">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
    </string-array>
    <string name="sort_prompt">Sort</string>
    <string name="filters">Filters</string>
    <string name="reset_filters">Reset filters</string>
    <string name="products_services">MOST POPULAR PRODUCTS&amp;SERVICES</string>
    <string name="product_1">Product 1</string>
    <string name="product_2">Product 2</string>
    <string name="product_3">Product 3</string>
    <string name="product_4">Product 4</string>
    <string name="product_5">Product 5</string>
    <string name="category1">Category 1</string>
    <string name="activate_acc">Activate your account</string>
    <string name="verify_acc">Verify your account</string>
    <string name="thanks">Thanks for signing up!</string>
    <string name="activate">Activate</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="events_menu">Events</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="create_event">Create event</string>
    <string name="explore_events">Explore events</string>
    <string name="calendar">Calendar</string>
    <string name="fav_events">Favorite events</string>
    <string name="fav_services">Favorite services</string>
    <string name="fav_products">Favorite products</string>
    <string name="notifications">Notifications</string>
    <string name="view_profile">View profile</string>
    <string name="log_out">Log out</string>
    <string name="create_business">Business registration</string>
    <string name="view_business">Business info</string>
    <string name="categories">Categories</string>
    <string name="event_types">Event types</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="upload_image">Upload image</string>
    <string name="selected_image">Selected image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="deactivate">Deactivate</string>
    <string name="old_pass">Old password :</string>
    <string name="new_pass">New password :</string>
    <string name="change_pass">Change password</string>
    <string name="chat">Chat</string>
    <string name="send_message">Send Message</string>
    <string name="type_a_message">Type a message</string>
    <string name="select_recipient">Select recipient</string>
    <string name="inbox">Inbox</string>
    <string name="to">To:</string>
    <string name="previous">Previous</string>
    <string name="product_service_title">Product/Service Title</string>
    <string name="product_service_description_goes_here">Product/Service description goes here</string>
    <string name="event_title">Event Title</string>
    <string name="event_description_goes_here">Event description goes here</string>
    <string name="name_ast">Name*</string>
    <string name="surname_ast">Surname*</string>
    <string name="email_ast">Email*</string>
    <string name="phone_ast">Phone*</string>
    <string name="address_ast">Address*</string>
    <string name="company_name_ast">Company name*</string>
    <string name="company_email_ast">Company email*</string>
    <string name="description_ast">Description*</string>
    <string name="expand_arrow">Expand arrow</string>
    <string name="event_type_details">Event type details</string>
    <string name="recommended_categories">Recommended categories</string>
    <string name="recommended_categories_ast">Recommended categories*</string>
    <string name="event_type_edit">Edit event type</string>
    <string name="create_event_type">Create event type</string>
    <string name="event_types_overview">Event types overview</string>
    <string name="create">Create</string>
    <string name="max_guests">Maximum number of guests :</string>
    <string name="name_simple">Name</string>
    <string name="id">ID</string>
    <string name="status_simple">Status</string>
    <string name="view">View</string>
    <string name="invited_events">Invited events</string>
</resources>