<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home" />

    <group android:id="@+id/homepage_menu">
    <item
        android:id="@+id/nav_events"
        android:title="@string/events_menu"
         />
    </group>
    <group android:id="@+id/homnepage_menu2">
    <item
        android:id="@+id/nav_products"
        android:title="@string/products"
         />
    <item
        android:id="@+id/nav_services"
        android:title="@string/services"
        />
    </group>
    <item
        android:id="@+id/nav_login"
        android:title="@string/login"
         />
    <item
        android:id="@+id/nav_signup"
        android:title="@string/sign_up"
         />
</menu>
