<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventTypeId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"
            android:padding="8dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/eventTypeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name_simple"
            android:padding="8dp"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/expandArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_expand_arrow"
            android:padding="8dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/expand_arrow" />
    </LinearLayout>


    <TextView
        android:id="@+id/eventTypeStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_simple"
        android:visibility="gone"
        android:padding="8dp"
        android:textColor="@android:color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/viewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:visibility="gone"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:backgroundTint="@color/dark_gray"
            android:textColor="@color/white"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
