<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.servicecreation.ServiceCreationContainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="302dp"
        android:layout_height="428dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/form_frame"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="21dp"
            android:contentDescription="@string/close_form_description"
            android:onClick="closeForm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/exit_form" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_service"
            android:textAlignment="center"
            android:textColor="@color/dark_gray"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <TextView
            android:id="@+id/unavailable_dates_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unavailable_dates"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="14dp"/>

        <Button
            android:id="@+id/select_date_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/input_field"
            android:paddingStart="12dp"
            android:text="@string/select_date"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unavailable_dates_text" />

        <Button
            android:id="@+id/show_dates_button"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_expand_arrow"
            android:text="..."
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toEndOf="@+id/select_date_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.273" />

        <TextView
            android:id="@+id/available_days_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_days"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_date_button"
            android:layout_marginTop="14dp"/>

        <LinearLayout
            android:id="@+id/day_checkbox_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/available_days_text">

            <CheckBox
                android:id="@+id/mon_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/mon"/>
            <CheckBox
                android:id="@+id/tue_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/tue"/>
            <CheckBox
                android:id="@+id/wed_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/wed"/>
            <CheckBox
                android:id="@+id/thu_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/thu"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/day_checkbox_group2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_checkbox_group">

            <CheckBox
                android:id="@+id/fri_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/fri"/>

            <CheckBox
                android:id="@+id/sat_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/sat"/>
            <CheckBox
                android:id="@+id/sun_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/sun"/>
        </LinearLayout>

        <TextView
            android:id="@+id/working_hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/working_hours"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_checkbox_group2"
            android:layout_marginTop="14dp"/>

        <LinearLayout
            android:id="@+id/working_hours_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/working_hours_text"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/from_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="12sp"/>
            <Button
                android:id="@+id/select_from_time_button"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/input_field"
                android:text="@string/select_time"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/to_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="12sp"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/select_to_time_button"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/input_field"
                android:text="@string/select_time"
                android:textAllCaps="false"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitService"
            android:layout_width="106dp"
            android:layout_height="39dp"
            android:background="@drawable/form_button"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.878"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backServiceCreate5"
            android:layout_width="106dp"
            android:layout_height="39dp"
            android:background="@drawable/form_button"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>