<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/eventImage"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/product_1"
        android:scaleType="centerCrop"
        android:src="@drawable/product4"
        app:shapeAppearanceOverlay="@style/roundedImageView"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/product_service_title" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/product_service_description_goes_here" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewDetailsButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_button"
        android:text="@string/view_details_buttton"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="11sp" />
</LinearLayout>
